--- a/manifest.json
+++ b/manifest.json
@@ -38,10 +38,10 @@
       "matches": [ "http://www.youtube.com/*", "https://www.youtube.com/*" ],
       "run_at": "document_end"
    }],
-  "name": "qTube (Beta!)",
+  "name": "qTube - Queue Youtube\u2122 Videos",
   "short_name": "qTube",
-  "description": "Get more out of Youtube, use it as a music player! qTube allows u to add/play videos in temporary queue",
-  "version": "1.2",
+  "description": "Get more out of Youtube, use it as a music player! qTube allows u to build temporary youtube video queue",
+  "version": "1.6",
 "icons": {
       "128": "icon.png",
       "16": "icon.png",
